--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>Iframe test</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'; child-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-ancestors 'self';">
 </head>
 <body>
 <iframe src="https://customer.freedompay.kg/v1/merchant/553348/card/payment?pg_payment_id=0199e663-0192-739e-8e8c-b0d2d30ef821" width="100%" height="100%">
