--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Iframe test</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-ancestors 'self';">
 </head>
 <body>
 <iframe src="https://customer.freedompay.kg/v1/merchant/553348/card/payment?pg_payment_id=0199e67e-18e3-72a9-a844-05690c52cd9e" width="100%" height="100%">
