--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>Iframe test</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-ancestors 'self';">
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self';">
 </head>
 <body>
 <iframe src="https://customer.freedompay.kg/v1/merchant/553348/card/payment?pg_payment_id=0199e68b-db55-73ca-bb81-ffbbd5f794a9" width="100%" height="100%">
