--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="en">
 <head>
     <title>Iframe test</title>
-    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self';">
 </head>
 <body>
-<iframe src="https://customer.freedompay.kg/v1/merchant/553348/card/payment?pg_payment_id=0199eb98-1774-70a9-a1a6-e58d0f31041d" width="100%" height="100%">
-
-</iframe>
+<form action="iframe.html" method="get">
+    <label for="url">URL фрейма:</label>
+    <input type="url" id="url" name="url" placeholder="https://customer.freedompay.kz/v1..." required>
+    <button type="submit">Открыть в айфрейме</button>
+</form>
 </body>
+</html>
