--- a/iframe.html
+++ b/iframe.html
@@ -6,6 +6,7 @@
     <title>Iframe test</title>
 </head>
 <body>
+<h3>Если эта надпись пропадёт, значит вы вышли из фрейма</h3>
 <iframe id="iframe" width="100%" height="500px"></iframe>
 
 <script>
